# af_memory

./: CMakeLists.txt  README.md
include/: af_calloc.h  af_free.h  af_malloc.h  af_memory.h  af_realloc.h  chunk_header.h  memory_manager.h  seg_free_list.h  splitter.h
src/: af_calloc.c  af_free.c  af_malloc.c  af_realloc.c  memory_manager.c  seg_free_list.c  splitter.c
